// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditPost Component renders an error as expected 1`] = `
<body>
  <div>
    <div
      class="EditPost"
    >
      <form>
        <textarea>
          Content of the post to be edited
        </textarea>
        <div
          class="EditPost__buttons"
        >
          <button
            type="submit"
          >
            Submit
          </button>
          <button
            type="submit"
          >
            Cancel
          </button>
        </div>
      </form>
      <p
        class="APIError"
      >
        Test error
      </p>
    </div>
  </div>
</body>
`;

exports[`EditPost Component renders the UI as expected 1`] = `
<body>
  <div>
    <div
      class="EditPost"
    >
      <form>
        <textarea>
          Content of the post to be edited
        </textarea>
        <div
          class="EditPost__buttons"
        >
          <button
            type="submit"
          >
            Submit
          </button>
          <button
            type="submit"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>
</body>
`;
